# distributed-high-frequency-measurement-experiment

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
logging-client/: CMakeLists.txt  logging_client.cc
logging-client-python/: README.md  fs_data_logger_pb2.py  fs_data_logger_pb2.pyi  fs_data_logger_pb2_grpc.py  python-logging-client.py
proto/: fs_data_logger.proto
raspberry-pi-setup/: README.md  flow-reader.service
server/: CMakeLists.txt  data_provider.h  flow_reader.cc  sensor_data_provider.cc  sensor_data_provider.h  sine_data_provider.cc  sine_data_provider.h
src/@types/: bridge.d.ts  plotly.d.ts
src/css/: main.css
src/html/: index.html
src/ts/: data_client.ts  data_worker.ts  main.ts  preload.ts  renderer.ts  settings.ts
